fix semantic errors

--- a/StatisticsCalculator/StatisticsCalculator/Resx/AppResources.pt.resx
+++ b/StatisticsCalculator/StatisticsCalculator/Resx/AppResources.pt.resx
@@ -190,8 +190,8 @@
     <comment>Normal distribution label</comment>
   </data>
   <data name="PairModeText" xml:space="preserve">
-    <value>Valores em pares</value>
-    <comment>Text that indicates a pair values sample</comment>
+    <value>Pares de valores</value>
+    <comment>Text that indicates a values pair sample</comment>
   </data>
   <data name="PercentageLabel" xml:space="preserve">
     <value>Porcentagem</value>
@@ -206,8 +206,8 @@
     <comment>Population variance label</comment>
   </data>
   <data name="RequirePairSample" xml:space="preserve">
-    <value>A amostra não esta no modo de valores em pares, altere a amostra para o modo de valores em pares para usar essa calculadora</value>
-    <comment>Warning text showed when sample is in pair value mode and is required to be in pair value mode</comment>
+    <value>A amostra não esta no modo de pares de valores, altere a amostra para o modo de pares de valores para usar essa calculadora</value>
+    <comment>Warning text showed when sample is in value pair mode and is required to be in value pair mode</comment>
   </data>
   <data name="RequireSimpleSample" xml:space="preserve">
     <value>A amostra não esta no modo de valores simples, altere a amostra para o modo de valores simples para usar essa calculadora</value>
