--- a/StatisticsCalculator/StatisticsCalculator/Resx/AppResources.pt.resx
+++ b/StatisticsCalculator/StatisticsCalculator/Resx/AppResources.pt.resx
@@ -249,4 +249,8 @@
     <value>Soma dos quadrados dos itens</value>
     <comment>Sum of square of items of the sample label</comment>
   </data>
+  <data name="Y_NewSampleItemPlaceholder" xml:space="preserve">
+    <value>New value of Y...</value>
+    <comment>Input placeholder por new sample item of value pair mode</comment>
+  </data>
 </root>
